2008-03-26  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/nodes/element.cc:
	* libxml++/nodes/element.h: Added add_child_text() with a previous_node 
	parameter, for adding between existing nodes.
	Added add_child_text_before() too.
	* libxml++/nodes/node.cc:
	* libxml++/nodes/node.h: Added add_child() with a previous_node 
	parameter, for adding between existing nodes.
	Added add_child_before() too.

	* docs/index.html: Removed the license clarifications text because I 
	always found it to be arbitrary and not very informative.
	* docs/reference/Doxyfile.in: Added a newin2p24 doxygen keyword. 
	* docs/reference/Makefile.am: Do not create a version-specific 
	directory name for reference documentation. The Since: text and links 
	in the documentation are enough to know what was in what version.

2.22.0:

2008-03-07  Deng Xiyue  <murrayc@murrayc.com>

	* libxml++/document.cc:
	* libxml++/document.h: Add a destructor 
	(does not break ABI because the base class already has a 
	virtual destructor) that calls xmlCleanupParser to match the 
	existing call to xmlInitParser() in the constructor. Fixes 
	a memory leak.
	Bug #501168 (Matt G.)

2008-01-17  Roland Stigge  <stigge@antcom.de>

	* libxml++/attribute.cc:
	* libxml++/dtd.cc:
	* libxml++/dtd.h:
	* libxml++/io/ostreamoutputbuffer.h:
	* libxml++/io/outputbuffer.h:
	* libxml++/keepblanks.cc:
	* libxml++/keepblanks.h:
	* libxml++/libxml++.h:
	* libxml++/nodes/cdatanode.cc:
	* libxml++/nodes/cdatanode.h:
	* libxml++/nodes/commentnode.cc:
	* libxml++/nodes/commentnode.h:
	* libxml++/nodes/contentnode.cc:
	* libxml++/nodes/element.cc:
	* libxml++/nodes/element.h:
	* libxml++/nodes/entityreference.cc:
	* libxml++/nodes/entityreference.h:
	* libxml++/nodes/node.cc:
	* libxml++/nodes/processinginstructionnode.cc:
	* libxml++/nodes/processinginstructionnode.h:
	* libxml++/nodes/textnode.cc:
	* libxml++/nodes/textnode.h:
	* libxml++/parsers/domparser.cc:
	* libxml++/parsers/domparser.h:
	* libxml++/parsers/parser.cc: