@@ -30,13 +30,13 @@ libxml++ is a C++ wrapper for the <a href="http://www.xmlsoft.org">libxml</a> XM
 </ul>
 
 <h2>Documentation</h2>
-<p>The short <a href="docs/manual/html/index.html">manual</a> gives an overview of the libxml++ API. You can also browse online the <a href="docs/reference/stable/html/hierarchy.html">reference documentation</a>.
+<p>The short <a href="docs/manual/html/index.html">manual</a> gives an overview of the libxml++ API. You can also browse online the <a href="docs/reference/html/hierarchy.html">reference documentation</a>.
 </p>
 </ul>
 
 <h2>Development</h2>
-<p>Libxml++ uses the GNOME <a href="http://cvs.gnome.org/bonsai/rview.cgi?cvsroot=/cvs/gnome&dir=libxml%2b%2b">CVS repository</a>.</p>
-<p>Bugs and patches are tracked in GNOME's bugzilla. Here is a list of <a href="http://bugzilla.gnome.org/buglist.cgi?short_desc_type=allwordssubstr&short_desc=&product=libxml%2B%2B&long_desc_type=allwordssubstr&long_desc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=anywords&keywords=&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&bug_status=NEEDINFO&bug_status=VERIFIED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&changedin=&chfieldfrom=&chfieldto=Now&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">open bugs</a>. Add new bugs <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=libxml%2B%2B">here</a>.</p>
+<p>Libxml++ uses the GNOME <a href="http://svn.gnome.org/viewvc/libxml%2B%2B/">Subversion repository</a>.</p>
+<p>Bugs and patches are tracked in GNOME's bugzilla. Here is a list of <a href="http://bugzilla.gnome.org/browse.cgi?product=libxml%2B%2B">open bugs</a>. Add new bugs <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=libxml%2B%2B">here</a>.</p>
 <p>
 The <a href="http://sourceforge.net/mail/?group_id=12999">mailing list</a> is hosted on
 <a href="http://sourceforge.net/projects/libxmlplusplus/">sourceforge</a>.</p>
